@@ -15,6 +15,7 @@ Log:
 	- send HOME key before dumping
 	- don't list some system variables which appears in dirlist: regCoef and regEq.
 	- fixed is_ready which checked the LSB instead of the MSB status word
+	- added 2 functions for adding/removing an entry from a dirlist tree
 	
 - 20/02/2006, version 0.0.5: roms
 	- error message is a glib allocated string for now.
